; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/dpaa/extr_if_dtsec.c_dtsec_ifmedia_sts.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/dpaa/extr_if_dtsec.c_dtsec_ifmedia_sts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { %struct.dtsec_softc* }
%struct.dtsec_softc = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }
%struct.ifmediareq = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ifnet*, %struct.ifmediareq*)* @dtsec_ifmedia_sts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dtsec_ifmedia_sts(%struct.ifnet* %0, %struct.ifmediareq* %1) #0 {
  %3 = alloca %struct.ifnet*, align 8
  %4 = alloca %struct.ifmediareq*, align 8
  %5 = alloca %struct.dtsec_softc*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %3, align 8
  store %struct.ifmediareq* %1, %struct.ifmediareq** %4, align 8
  %6 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %7 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %6, i32 0, i32 0
  %8 = load %struct.dtsec_softc*, %struct.dtsec_softc** %7, align 8
  store %struct.dtsec_softc* %8, %struct.dtsec_softc** %5, align 8
  %9 = load %struct.dtsec_softc*, %struct.dtsec_softc** %5, align 8
  %10 = call i32 @DTSEC_LOCK(%struct.dtsec_softc* %9)
  %11 = load %struct.dtsec_softc*, %struct.dtsec_softc** %5, align 8
  %12 = getelementptr inbounds %struct.dtsec_softc, %struct.dtsec_softc* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = call i32 @mii_pollstat(%struct.TYPE_2__* %13)
  %15 = load %struct.dtsec_softc*, %struct.dtsec_softc** %5, align 8
  %16 = getelementptr inbounds %struct.dtsec_softc, %struct.dtsec_softc* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.ifmediareq*, %struct.ifmediareq** %4, align 8
  %21 = getelementptr inbounds %struct.ifmediareq, %struct.ifmediareq* %20, i32 0, i32 1
  store i32 %19, i32* %21, align 4
  %22 = load %struct.dtsec_softc*, %struct.dtsec_softc** %5, align 8
  %23 = getelementptr inbounds %struct.dtsec_softc, %struct.dtsec_softc* %22, i32 0, i32 0
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.ifmediareq*, %struct.ifmediareq** %4, align 8
  %28 = getelementptr inbounds %struct.ifmediareq, %struct.ifmediareq* %27, i32 0, i32 0
  store i32 %26, i32* %28, align 4
  %29 = load %struct.dtsec_softc*, %struct.dtsec_softc** %5, align 8
  %30 = call i32 @DTSEC_UNLOCK(%struct.dtsec_softc* %29)
  ret void
}

declare dso_local i32 @DTSEC_LOCK(%struct.dtsec_softc*) #1

declare dso_local i32 @mii_pollstat(%struct.TYPE_2__*) #1

declare dso_local i32 @DTSEC_UNLOCK(%struct.dtsec_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
